test(match): 2-tier 캐시 경로 커버하는 테스트 추가
MatchServiceTest: ZSET hit + 단건 all hit / ZSET miss → DB+ZSET save /
ZSET hit + 단건 partial miss → DB IN + saveAll / queueId in-memory 필터 /
season != null 시 캐시 우회 / 빈 결과 경로.

MatchSingleCacheAdapterTest: MGET 부분 hit/miss 매핑, 빈 입력 / Redis 장애 처리.
MatchIdsCacheAdapterTest: 키 없음 vs 빈 ZSET 구분, ZREVRANGE 와 ZREVRANGEBYSCORE
분기, 빈 입력 시 미상호작용.